--- a/styling.css
+++ b/styling.css
@@ -45,49 +45,37 @@ body{
 
 /*Navigation bar*/
 .navbar-custom {
-  background-color: #d18136;
-  border-color: #bb712b;
-  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#da9b60), to(#d18136));
-  background-image: -webkit-linear-gradient(top, #da9b60, 0%, #d18136, 100%);
-  background-image: -moz-linear-gradient(top, #da9b60 0%, #d18136 100%);
-  background-image: linear-gradient(to bottom, #da9b60 0%, #d18136 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffda9b60', endColorstr='#ffd18136', GradientType=0);
+  background-color: #f8d6ad;
+  border-color: #f5c78e;
 }
 .navbar-custom .navbar-brand {
-  color: #ffffff;
+  color: #8a4513;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus {
-  color: #e6e6e6;
+  color: #5d2f0d;
   background-color: transparent;
 }
 .navbar-custom .navbar-text {
-  color: #ffffff;
+  color: #8a4513;
 }
 .navbar-custom .navbar-nav > li:last-child > a {
-  border-right: 1px solid #bb712b;
+  border-right: 1px solid #f5c78e;
 }
 .navbar-custom .navbar-nav > li > a {
-  color: #ffffff;
-  border-left: 1px solid #bb712b;
+  color: #8a4513;
+  border-left: 1px solid #f5c78e;
 }
 .navbar-custom .navbar-nav > li > a:hover,
 .navbar-custom .navbar-nav > li > a:focus {
-  color: #c0c0c0;
+  color: #cf8750;
   background-color: transparent;
 }
 .navbar-custom .navbar-nav > .active > a,
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
-  color: #c0c0c0;
-  background-color: #bb712b;
-  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#bb712b), to(#d48a45));
-  background-image: -webkit-linear-gradient(top, #bb712b, 0%, #d48a45, 100%);
-  background-image: -moz-linear-gradient(top, #bb712b 0%, #d48a45 100%);
-  background-image: linear-gradient(to bottom, #bb712b 0%, #d48a45 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffbb712b', endColorstr='#ffd48a45', GradientType=0);
+  color: #cf8750;
+  background-color: #f5c78e;
 }
 .navbar-custom .navbar-nav > .disabled > a,
 .navbar-custom .navbar-nav > .disabled > a:hover,
@@ -107,43 +95,43 @@ body{
 }
 .navbar-custom .navbar-collapse,
 .navbar-custom .navbar-form {
-  border-color: #b96f2a;
+  border-color: #f5c68c;
 }
 .navbar-custom .navbar-nav > .dropdown > a:hover .caret,
 .navbar-custom .navbar-nav > .dropdown > a:focus .caret {
-  border-top-color: #c0c0c0;
-  border-bottom-color: #c0c0c0;
+  border-top-color: #cf8750;
+  border-bottom-color: #cf8750;
 }
 .navbar-custom .navbar-nav > .open > a,
 .navbar-custom .navbar-nav > .open > a:hover,
 .navbar-custom .navbar-nav > .open > a:focus {
-  background-color: #bb712b;
-  color: #c0c0c0;
+  background-color: #f5c78e;
+  color: #cf8750;
 }
 .navbar-custom .navbar-nav > .open > a .caret,
 .navbar-custom .navbar-nav > .open > a:hover .caret,
 .navbar-custom .navbar-nav > .open > a:focus .caret {
-  border-top-color: #c0c0c0;
-  border-bottom-color: #c0c0c0;
+  border-top-color: #cf8750;
+  border-bottom-color: #cf8750;
 }
 .navbar-custom .navbar-nav > .dropdown > a .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
+  border-top-color: #8a4513;
+  border-bottom-color: #8a4513;
 }
 @media (max-width: 767) {
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
-    color: #ffffff;
+    color: #8a4513;
   }
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #c0c0c0;
+    color: #cf8750;
     background-color: transparent;
   }
   .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #c0c0c0;
-    background-color: #bb712b;
+    color: #cf8750;
+    background-color: #f5c78e;
   }
   .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -153,8 +141,8 @@ body{
   }
 }
 .navbar-custom .navbar-link {
-  color: #ffffff;
+  color: #8a4513;
 }
 .navbar-custom .navbar-link:hover {
-  color: #c0c0c0;
+  color: #cf8750;
 }
