--- a/what.css
+++ b/what.css
@@ -21,7 +21,7 @@ body{
     color:#8A4513;
 }
 
-.blue{
+/* .blue{
     color: white; 
     background-color:#cf8750;
     outline: medium;    
@@ -31,7 +31,7 @@ body{
     background-color:white;
     color:#cf8750; 
     outline: medium;
-}
+} */
 
 .bodyimage {
   height: 50px;
