--- a/styling.css
+++ b/styling.css
@@ -24,14 +24,13 @@ body{
 .blue{
     color: white; 
     background-color:#f8d6ad;
-    color:#f8d4ad;
-    outline: medium;    
+    outline: none;    
 }
 
 .blue:hover{
     background-color:white;
     color:#f8d6ad; 
-    outline: medium;
+    outline: none;
 }
 
 
