--- a/aboutme.css
+++ b/aboutme.css
@@ -29,6 +29,7 @@ body{
     letter-spacing: 1.5px;
     padding: 10px;
     margin-top: 100px;
+    width:800px;
     color:rgba(148, 178, 230, 0.6);
 }
 
