--- a/aboutme.css
+++ b/aboutme.css
@@ -28,8 +28,8 @@ body{
     text-align: center;
     letter-spacing: 1.5px;
     padding: 10px;
-    margin-top: 100px;
-    width:800px;
+    margin:0 auto;
+    width:1000px;
     color:rgba(148, 178, 230, 0.6);
 }
 
