--- a/aboutme.css
+++ b/aboutme.css
@@ -6,9 +6,10 @@ html{
 /*Background Image*/
 body{
     font-family: 'Quicksand', sans-serif;
-    background-color: rgba(148, 178, 230, 0.6);
+    background-color: rgba(7, 21, 43, 0.9);
     background-attachment: fixed;
-    background-size: cover;   
+    background-size: cover;  
+    opacity: 40%; 
 }
 
 .introduceme{
@@ -24,12 +25,11 @@ body{
 
 /*Style Jumbotron*/
 .jumbotron{
-    background-color: rgba(7, 21, 43, 0.9);
+    background-color: transparent;
     text-align: center;
     letter-spacing: 1.5px;
     padding: 10px;
-    margin:0 auto;
-    width:1000px;
+    margin-top:100px;
     color:rgba(148, 178, 230, 0.6);
 }
 
