--- a/aboutme.css
+++ b/aboutme.css
@@ -6,7 +6,7 @@ html{
 /*Background Image*/
 body{
     font-family: 'Quicksand', sans-serif;
-    background-color: #C67D32;
+    background-color: #8a4513;
     background-attachment: fixed;
     background-size: cover;  
     opacity: 40%; 
@@ -30,7 +30,7 @@ body{
     letter-spacing: 1.5px;
     padding: 10px;
     margin-top:100px;
-    color:rgba(148, 178, 230, 0.6);
+    color:#f8d6ad;
 }
 
 /*buttons*/
@@ -43,7 +43,7 @@ body{
 
 .blue{
     color: white; 
-    background-color:#f8d6ad;
+    background-color:rgba(148, 178, 230, 0.6);
     outline: none;    
 }
 
