--- a/styling.css
+++ b/styling.css
@@ -13,12 +13,12 @@ body{
 
 /*Style Jumbotron*/
 .jumbotron{
-    background-color: transparent;
+    background-color: rgba(238, 137, 14, 0.2);
     text-align: center;
     letter-spacing: 1.5px;
     padding: 10px;
     margin-top: 100px;
-    color:#C67D32;
+    color:#8a4513;
 }
 
 .blue{
