--- a/aboutme.css
+++ b/aboutme.css
@@ -6,10 +6,9 @@ html{
 /*Background Image*/
 body{
     font-family: 'Quicksand', sans-serif;
-    background-color: #8a4513;
+    background-color: #4A5072;
     background-attachment: fixed;
     background-size: cover;  
-    opacity: 40%; 
 }
 
 .introduceme{
@@ -30,7 +29,7 @@ body{
     letter-spacing: 1.5px;
     padding: 10px;
     margin-top:100px;
-    color:#f8d6ad;
+    color:rgba(148, 178, 230, 0.6);
 }
 
 /*buttons*/
@@ -43,7 +42,7 @@ body{
 
 .blue{
     color: white; 
-    background-color:rgba(148, 178, 230, 0.6);
+    background-color:#f8d6ad;
     outline: none;    
 }
 
