--- a/styling.css
+++ b/styling.css
@@ -13,12 +13,12 @@ body{
 
 /*Style Jumbotron*/
 .jumbotron{
-    background-color: rgba(238, 137, 14, 0.2);
+    background-color: rgba(240, 205, 90, 0.6);
     text-align: center;
     letter-spacing: 1.5px;
     padding: 10px;
     margin-top: 100px;
-    color:#8a4513;
+    color:#552404;
 }
 
 .blue{
