--- a/styling.css
+++ b/styling.css
@@ -13,10 +13,10 @@ body{
 
 /*Style Jumbotron*/
 .jumbotron{
-    background-color: rgba(240, 205, 90, 0.6);
+    background-color: #f8d6ad;
     text-align: center;
     letter-spacing: 1.5px;
-    padding: 10px;
+    padding: 20px;
     margin-top: 100px;
     color:#552404;
 }
@@ -49,21 +49,21 @@ body{
   border-color: #f5c78e;
 }
 .navbar-custom .navbar-brand {
-  color: #8a4513;
+  color: #552404;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus {
-  color: #5d2f0d;
+  color: #240f02;
   background-color: transparent;
 }
 .navbar-custom .navbar-text {
-  color: #8a4513;
+  color: #552404;
 }
 .navbar-custom .navbar-nav > li:last-child > a {
   border-right: 1px solid #f5c78e;
 }
 .navbar-custom .navbar-nav > li > a {
-  color: #8a4513;
+  color: #552404;
   border-left: 1px solid #f5c78e;
 }
 .navbar-custom .navbar-nav > li > a:hover,
@@ -115,12 +115,12 @@ body{
   border-bottom-color: #cf8750;
 }
 .navbar-custom .navbar-nav > .dropdown > a .caret {
-  border-top-color: #8a4513;
-  border-bottom-color: #8a4513;
+  border-top-color: #552404;
+  border-bottom-color: #552404;
 }
 @media (max-width: 767) {
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
-    color: #8a4513;
+    color: #552404;
   }
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -141,7 +141,7 @@ body{
   }
 }
 .navbar-custom .navbar-link {
-  color: #8a4513;
+  color: #552404;
 }
 .navbar-custom .navbar-link:hover {
   color: #cf8750;
