--- a/aboutme.css
+++ b/aboutme.css
@@ -29,7 +29,7 @@ body{
     letter-spacing: 1.5px;
     padding: 10px;
     margin-top:100px;
-    color:rgba(164, 175, 230, 0.3);
+    color:rgb(210, 216, 240);
 }
 
 /*buttons*/
